tests/ui/rustdoc/doc-alias-same-name.stderr
error: `#[doc(alias = "Foo"]` is the same as the item's name
  --> $DIR/doc-alias-same-name.rs:3:15
   |
LL | #[doc(alias = "Foo")]
   |               ^^^^^

error: aborting due to 1 previous error

