tests/ui/rustdoc/doc-alias-same-name.rs
#![crate_type = "lib"]

#[doc(alias = "Foo")] //~ ERROR
pub struct Foo;
